@@ -1,6 +1,9 @@
 EXE_INC = \
 	-I$(LIB_SRC)/finiteVolume/lnInclude \
 	-I$(LIB_SRC)/meshTools/lnInclude \
-	-I$(LIB_SRC)/triSurface/lnInclude
+	-I$(LIB_SRC)/triSurface/lnInclude \
+	-I../toolsGIS/lnInclude
 
-LIB_LIBS = -lfiniteVolume
+LIB_LIBS = -lfiniteVolume \
+    -L$(FOAM_USER_LIBBIN) \
+    -ltoolsGIS
