@@ -1,0 +1,67 @@
+/*---------------------------------------------------------------------------*\
+  =========                 |
+  \\      /  F ield         | OpenFOAM: The Open Source CFD Toolbox
+   \\    /   O peration     | Website:  https://openfoam.org
+    \\  /    A nd           | Copyright (C) 2011-2018 OpenFOAM Foundation
+     \\/     M anipulation  |
+-------------------------------------------------------------------------------
+License
+    This file is part of OpenFOAM.
+
+    OpenFOAM is free software: you can redistribute it and/or modify it
+    under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    OpenFOAM is distributed in the hope that it will be useful, but WITHOUT
+    ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+    FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+    for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with OpenFOAM.  If not, see <http://www.gnu.org/licenses/>.
+
+Global
+    setDeltaT.H
+
+Description
+    Reset the timestep to maintain a constant maximum courant Number.
+    Reduction of time-step is immediate, but increase is damped to avoid
+    unstable oscillations.
+
+    This routine also adjust timestep to ensure that event times (for patch
+    or source term) is exactly reached by the solver.
+
+\*---------------------------------------------------------------------------*/
+
+if (adjustTimeStep)
+{
+    scalar maxDeltaTFact = maxCo/(CoNum + small);
+    scalar deltaTFact = min(min(maxDeltaTFact, 1.0 + 0.1*maxDeltaTFact), 1.2);
+   
+    runTime.setDeltaT
+        (
+            min
+            (
+                deltaTFact*runTime.deltaTValue(),
+                maxDeltaT
+            )
+        );
+    
+
+    if (allEventDates.size()>0)
+    {
+            const scalar timeToNextEvent = allEventDates[currentGlobalEvent+1]-runTime.timeOutputValue();
+            scalar nSteps =  timeToNextEvent/runTime.deltaTValue();
+            if (nSteps < labelMax)
+            {
+                const label nStepsToNextEvent = label(max(nSteps, 1) + 0.99);
+                runTime.setDeltaTNoAdjust(timeToNextEvent/nStepsToNextEvent);
+            }
+            if (nSteps <= 1) currentGlobalEvent++;
+    }
+    Info<< "deltaT = " <<  runTime.deltaTValue() << endl;
+
+}
+
+// ************************************************************************* //
