@@ -1,4 +1,4 @@
 date 0
-0 0 0.5 0.1
+250 0 0.5 0.001
 date 72000
-0 0 0.5 0.2
+250 0 0.5 0
