@@ -17,7 +17,7 @@ FoamFile
 
 ddtSchemes
 {
-  default Euler;
+  default backward;
 }
 
 gradSchemes
